--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/spirited_away_axo_icon.ico">
+  <meta name="description" content="I do not vibe with the law your honor.">
+  <meta name="862205084" content="862205084">
 
-  <title>John Doe - Business Administration</title>
+  <title>Seuk Hee Joe -Bioengineering</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Seuk Hee Joe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/SeukHeeJoe.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Seuk Hee Joe
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Bioengineering📚</div>
+        <p class="lead mb-4">First to make it into college in my immigrated family and considered a hard-working person to many of my colleagues. Although, I am considered hard-working many people think I am a funny and nice guy. Even though that kinda sucks, because nice guys do finish last. But, I am okay with that and live with that. A lot of my friends and family think I am smart and quick-witted and make decisions, almost like a leader in a sense, and push people to move forward.<br><br>
 
-        Enter bio here<br><br>
+        Being alone, working by myself in order for me to become the person that I am today. That is what I have built up to my name; although it's not what I wanted to happen, it just has. I have always tried my best to succeed and try my hardest in life because it is not just me who I have to think about. I have to think and realize the amount of pain and suffering my parents and other family members had to go through in order for us to live. I will forever be grateful for what they have done for me and the family. It pushes me to become a person and a better student. My friends have also been a big impact on my life. They have taught me a lot of life lessons that my parents nor my brothers could have ever taught me. Even the people that I am not friends with anymore have impacted and have created who I am today. I think and speak because of the lessons that they have taught me, thankfully not them creating and manipulating me to make me who I am. Rather, it is the conversations and memories that teach me to become a better person, almost like steps for me to become a better person. I would not trade the world for the experiences and friends that I have made through my journey on this tiny planet. Even the worst in my life I do not regret having in my life because of the message and understanding of why they became like that and also it teaches me valuable lessons that my family or friends could ever teach me.<br><br>
 
-        Enter bio here
+        I enjoy reading, playing volleyball, gaming, and working out. Currently, I am training to bring my vert (my jump height) back to being 35 inches and hopefully, I can go past that. I love to read and currently, I am rereading the “Color Purple” due to the powerful image and message that the author portrays in just a single character and her experiences in life. (It is a great book and I highly recommend it!) I have been stuck on playing a lot of League of Legends, Valorant, Apex, and Chess. Having a variety of games is great because if you start losing in one game you can just move to the next. I like to exercise a lot because as I was younger I was very round and so being fit is something that pushes me forward, in a sense. It also is great to relieve stress. 
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/Gamermoment">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/Seuki12">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/seukijo">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:Alexjoe726@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,30 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Guest Service</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Target</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              •  Had to speak to customers and ensure that they were happy with what was happening<br> 
+              • Had to deal with many Karens<br>
+              • Experience with handling money and defusing situations<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2020 - January 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Team member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Jamba Juice</a></div>
             <p>
               • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Blending smoothies<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
-          </div>
-        </div>
-
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
-          <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
-            <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
-          </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">February 2019 - June 2019</span>
           </div>
         </div>
 
@@ -152,33 +134,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bioengineering</div>
+            <div>Student of the BIEN</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">September 2020 - June 2024</span>
           </div>
         </div>
 
@@ -191,7 +151,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/car.jpg" width="500px">
+            <img src="img/beach.jpg" width="500px"><br>
+            <img src="img/photoshoot.jpg" width="500px">
+            <img src="img/curse.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +162,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Seuk Hee Joe</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
